--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ license = "Unlicense"
 license-file = "UNLICENSE"
 
 [dependencies]
-cgmath = "0.17"
+sat = { git = "https://github.com/frostu8/sat", tag = "v0.1.0-alpha" }
